--- a/app/assets/stylesheets/form_login.scss
+++ b/app/assets/stylesheets/form_login.scss
@@ -5,3 +5,7 @@
     background-size: cover;
     height: 875px;
 }
+
+#login-paragraph {
+    text-align: justify;
+}
